<resources>
    <string name="app_name">FinalYearApp</string>
    <string name="title_clients">Clients</string>
    <string name="title_workout">Workouts</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_home">Home</string>
    <string name="title_session">Sessions</string>
    <string name="title_logs">Logs</string>
    <string name="hintText">Input Message Here..</string>
    <string name="bnrUDI">Client ID:</string>
    <string name="bnrTName">Trainer Name:</string>
    <string name="bnrTID">Trainer ID:</string>
    <string name="bnrExe">ADD NEW EXERCISE</string>
    <string name="bnrCli">ADD A NEW CLIENT</string>
    <string name="bnrInfo">SESSION INFORMATION</string>
    <string name="bnrBookExe">Add Workout:</string>
    <string name="bnrBookClient">Add Client:</string>
    <string name="bnrBookTime">Book A Time:</string>
    <string name="bnrCS">Unfortunately this flow was not implemented in time. The contents of this section can be added to the future work of the project</string>
    <string name="btnEdit">EDIT SESSION</string>
    <string name="btnCancel">CANCEL SESSION</string>
    <string name="btnBook">BOOK</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnReg">Register</string>
    <string name="btnLogin">Login</string>
    <string name="btnMsg">MESSAGE TRAINER</string>
    <string name="btnLogs">SESSION LOGS</string>
    <string name="edtDisp">Display Name</string>
    <string name="edtEmail">Email</string>
    <string name="edtPass">Password</string>
    <string name="addLowExe">+ Add Lower Body Exercise</string>
    <string name="addUpExe">+ Add Upper Body Exercise</string>
    <string name="infoName">Client Name:</string>
    <string name="infoDate">Session Date:</string>
    <string name="infoTime">Session Time:</string>
    <string name="infoExe"> Assigned Workout:</string>
    <string name="editDate">Change Date:</string>
    <string name="editTime">Change Time:</string>
    <string name="editExe"> Change Workout:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="txtCredits"><a href="https://myptorganiser.page.link/Invite">Test Out Dynamic Link Here</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
