<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17183B">
    <RelativeLayout
        android:id="@+id/schBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/clientInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bdr_inbox">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bnrInfo"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/holo_red_dark"
                    style="@style/Base.TextAppearance.AppCompat.Headline"/>
                <TextView
                    android:id="@+id/bnrName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/infoName"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:layout_marginTop="50dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#2d2d2d"/>
                <TextView
                    android:id="@+id/bnrDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/infoDate"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:layout_below="@id/bnrName"/>
                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/bnrName"
                    android:textColor="#2d2d2d"/>
                <TextView
                    android:id="@+id/bnrTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/infoTime"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:layout_below="@id/bnrDate"/>
                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/bnrDate"
                    android:textColor="#2d2d2d"/>
                <TextView
                    android:id="@+id/bnrExe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/infoExe"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:layout_below="@id/bnrTime"/>
                <TextView
                    android:id="@+id/txtExe"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="145dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/bnrTime"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#2d2d2d"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btnEdit"
            android:textColor="#FEFCFB"
            android:textStyle="bold"
            android:layout_above="@+id/btnCancel"
            android:background="@android:color/holo_green_dark"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btnCancel"
            android:textColor="#FEFCFB"
            android:textStyle="bold"
            android:layout_margin="0dp"
            android:background="@android:color/holo_red_dark"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</FrameLayout>