<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainerFragment.EditorFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#17183B">
        <LinearLayout
            android:id="@+id/lytExercise"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bdr_inbox"
            android:layout_margin="10dp"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/txtClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bnrExe"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#2d2d2d"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <Button
                android:id="@+id/btnAddUpper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/addUpExe"
                android:textColor="#FF4F79"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnAddLower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/addLowExe"
                android:textColor="#FF4F79"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/lstWorkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lytExercise"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_save"
            android:contentDescription="submit"
            android:background="#1282A2"
            android:layout_margin="16dp" />
    </RelativeLayout>

</FrameLayout>