<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientFragment.HomeFragment_Client"
    android:background="#1282A2">

    <RelativeLayout
        android:id="@+id/lytProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtDspName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/crdInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/txtDspName"
            android:layout_above="@id/btnMsg"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bdr_inbox">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Information"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Headline"/>
                <TextView
                    android:id="@+id/bnrUID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/bnrUDI"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtUID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@id/bnrUID"
                    android:textColor="#2d2d2d"/>
                <TextView
                    android:id="@+id/bnrTName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtUID"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/bnrTName"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtTName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/bnrTName"
                    android:layout_below="@id/bnrUID"
                    android:textColor="#2d2d2d" />
                <TextView
                    android:id="@+id/bnrTID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/txtTName"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/bnrTID"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtTID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/bnrTID"
                    android:layout_below="@id/txtTName"
                    android:textColor="#2d2d2d"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@id/btnMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btnMsg"
            android:textAlignment="textEnd"
            android:textColor="#FEFCFB"
            android:textStyle="bold"
            android:layout_above="@+id/btnCancel"
            android:layout_marginBottom="2dp"
            android:background="#17183B"
            android:paddingEnd="50dp"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="textEnd"
            android:text="@string/btnLogs"
            android:textColor="#FEFCFB"
            android:textStyle="bold"
            android:layout_margin="0dp"
            android:background="#17183B"
            android:paddingEnd="50dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


</FrameLayout>