<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Session"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bnrDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/editDate"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtDate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/bnrTime"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="11/20/2020"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:padding="5dp"
                android:background="@drawable/bdr_inbox"/>

            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtDate"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/bnrTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/editTime"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_below="@id/bnrDate"/>
            <TextView
                android:id="@+id/txtTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/bnrTime"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="11/20/2020"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:padding="5dp"
                android:layout_below="@id/txtDate"
                android:background="@drawable/bdr_inbox"/>
            <Button
                android:id="@+id/btnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtDate"
                android:layout_marginTop="65dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/bnrWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/editExe"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_below="@id/bnrTime"/>
            <Spinner
                android:id="@+id/spinExe"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/bnrWorkout"
                android:layout_below="@id/bnrTime"
                android:layout_marginTop="35dp"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>